# SampleProjects

./: .gitignore
AoC2021/: amphipod.cpp  arithmetic_logic_unit.cpp  beacon_scanner.cpp  binary_diagnostic.cpp  chiton.cpp  dirac_dice.cpp  dive.cpp  dumbo_octopus.cpp  extended_polymerization.cpp  giant_squid.cpp  hydrothermal_venture.cpp  lanternfish.cpp  packet_decoder.cpp  passage_pathing.cpp  reactor_reboot.cpp  sea_cucumber.cpp  seven_segment.cpp  smoke_basin.cpp  snailfish.cpp  sonar_sweep.cpp  syntax_scoring.cpp  transparent_origami.cpp  treachery_whales.cpp  trench_map.cpp  trick_shot.cpp
AoC2022/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  2.cpp  20.cpp  21.cpp  22.cpp  23.cpp  24.cpp  25.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
AoC2023/: 1.py
AoC2024/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
BinaryTree/: binary_search_tree.cpp  binary_search_tree.h  bst_test.c  bst_test.cpp
CompilerPractice/: CMakeLists.txt  decaf_lexer.cpp  decaf_lexer.h  lexer_test.cpp  output  readme.txt  token.h
CompilerPractice/GeneralTestPrograms/: test_program_2.decaf  test_program_3.decaf
CompilerPractice/TestPrograms/: test_program_1.decaf  test_program_4.decaf
CompilerPractice/include/: decaf_grammar.h  decaf_lexer.h  fsm.h  grammar.h  token.h
CompilerPractice/lexer/: decaf_lexer.cpp  lexer_test.cpp  print_lexer_results.cpp
CompilerPractice/lexer/LexerTest/: error_long_identifiers.decaf  test_bool_identifiers_keywords.decaf  test_comments.decaf  test_identifier_not_keyword.decaf  test_int_double.decaf  test_punctuation.decaf
CompilerPractice/parser/: ast.h  ast_original.h  decaf_parser_test.cpp  fsm.h  fsm_test.cpp  grammar.h  parser.cpp  parser.h  parser_test.cpp
HowToScaleYourModelExercises/: collective_matmul.py  env.sh.example  problem_1.py  problem_2.py  setup.sh  sharded_matmul.py  test.py  utils.py  worker_setup.sh
cracklepop/: CracklePop.txt
